--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,22 @@
+
 <!doctype html>
-<html lang="en">
+<html lang="en" style="height: 100%;">
+
 <head>
   <meta charset="utf-8">
   <title>AppDigifood</title>
   <base href="/">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="manifest" href="manifest.json" crossorigin="use-credentials">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <meta name="theme-color" content="#1976d2">
 </head>
-<body>
+
+<body style="height: 100%;">
   <app-root></app-root>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
+
 </html>
